[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
script = ExtResource("1_menu")
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
custom_constants/separation = 24

[node name="Title" type="Label" parent="VBoxContainer"]
text = "Auto Survival: Sustancias"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="VBoxContainer"]
custom_constants/separation = 4

[node name="StatsLabel" type="Label" parent="VBoxContainer/Stats"]
text = "Estadísticas"
horizontal_alignment = 1

[node name="BestTimeLabel" type="Label" parent="VBoxContainer/Stats"]
text = "Mejor tiempo: 00:00"
horizontal_alignment = 1

[node name="BestKillsLabel" type="Label" parent="VBoxContainer/Stats"]
text = "Récord de bajas: 0"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
custom_constants/separation = 12

[node name="StartButton" type="Button" parent="VBoxContainer/Buttons"]
text = "Comenzar"

[node name="ConfigButton" type="Button" parent="VBoxContainer/Buttons"]
text = "Configuración"

[node name="CreditsButton" type="Button" parent="VBoxContainer/Buttons"]
text = "Créditos"
